# tiny_nla

./: .gitignore  README.md  pyproject.toml  test_api.py
configs/: datagen_0.6b_25k.yaml  datagen_smoke_100.yaml  datagen_smoke_1k.yaml  train_0.6b.yaml
nla/: __init__.py  roundtrip.py  test.py
nla/datagen/: __init__.py  _common.py  api_explain.py  extract_positions.py  extract_vectors.py  providers.py  run_pipeline.py  split_positions.py
nla/training/: build_training_data.py  env_config.py  eval_base_loss.py  injection.py  injection_token_cache.yaml  injection_tokens.py  loss.py  models.py  resolve.py  schema.py  sglang_rollout.py  sidecar.py  train_actor_sft.py  train_critic_sft.py  train_rl.py
scripts/: build_data.slurm  diag_injection.slurm  eval_base_loss.slurm  extract_vectors.slurm  merge_vectors.slurm  nla_eval_fve.py  nla_infer.py  prepare_data.sh  push_to_hub.py  rl.slurm  rl_sglang.slurm  sft_actor.slurm  sft_critic.slurm  smoke_actor.slurm  smoke_critic.slurm  smoke_rl.slurm  smoke_test.sh  snapshot_16789840.sh  snapshot_checkpoints.sh  snapshot_checkpoints_16789833.sh  test_actor.slurm  test_base_loss.slurm  test_critic.slurm  test_generation.slurm  test_rl.slurm  test_rl_sglang.slurm  test_rl_smoke.slurm  test_sft_norm.slurm
