[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nla"
version = "0.1.0"
description = "Lightweight NLA (Natural Language Autoencoders) pipeline for small HuggingFace models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyarrow",
    "datasets",
    "httpx",
    "transformers",
    "torch",
    "tqdm",
    "anthropic",
    "pyyaml",
    "safetensors",
]

[project.optional-dependencies]
sglang = ["sglang[all]>=0.3.0", "pybase64"]
rl = ["sglang[all]>=0.3.0", "pybase64"]

[tool.setuptools.packages.find]
include = ["nla*"]
